<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hiddenButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_dimen"
    android:layout_marginBottom="@dimen/space_dimen"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:background="@drawable/green_circle_button"
        android:text="@string/label_add"
        android:textAllCaps="false"
        android:textColor="@color/background"

        />

    <Button
        android:id="@+id/rmv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_circle_button"
        android:text="@string/label_remove"
        android:textAllCaps="false"
        android:textColor="@color/background"
        />

</LinearLayout>