...
    <string name="conf">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="email_hint">example@email.com</string>
    <string name="phone_hint">00-0000-0000</string>
    <string name="label_add">Add</string>
    <string name="label_remove">Remove</string>


    <!-- title name from each tab-->
    <string name="title_1">Button</string>
    <string name="title_2">Contacts</string>
    <string name="title_3">Settings</string>
...
